# wineyard

./: Cargo.toml  README.md  flake.nix
wineyard-core/: Cargo.toml  README.md
wineyard-core/src/: lib.rs
wineyard-core/src/archives/: mod.rs  sevenz.rs  tar.rs  universal.rs  zip.rs
wineyard-core/src/compression/: algorithm.rs  compressor.rs  decompressor.rs  tests.rs
wineyard-core/src/hashes/: algorithm.rs  hasher.rs  mod.rs  tests.rs
wineyard-core/src/network/: downloader.rs
wineyard-daemon/: Cargo.toml
wineyard-runtime/: Cargo.toml  README.md
wineyard-runtime/src/: lib.rs
