[package]
name = "wineyard-runtime"
version = "0.1.0"
authors = ["Nikita Podvirnyi <krypt0nn@vk.com>"]
license = "GPL-3.0"
edition = "2024"
publish = false

[dependencies]
wineyard-core = { path = "../wineyard-core" }

thiserror = "1.0"
rand = "0.9"
base32 = "0.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
